# goldrust-backup

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/: codecov.yml
.github/workflows/: check.yml  nostd.yml  safety.yml  scheduled.yml  test.yml
examples/: base.rs
src/: impl_check.rs  lib.rs
tests/: base.rs
tests/resources/golden/: base-base.json
