[package]
name = "goldrust"
description = "A Rust library for testing HTTP clients with golden files."
version = "0.1.3"
edition = "2021"
repository = "https://github.com/sjunepark/goldrust"
license = "MIT"
keywords = ["testing", "mocking", "golden-file"]

[dependencies]
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.40.0", features = ["full"] }

wiremock = "0.6.2"
reqwest = { version = "0.12.7" }