[package]
name = "goldrust"
description = "A Rust library for testing HTTP clients with golden files."
version = "0.1.7"
edition = "2021"
#rust-version = "1.76.0" # In order to use `insepct_err`
repository = "https://github.com/sjunepark/goldrust"
license = "MIT"
keywords = ["testing", "mocking", "golden-file"]

[dependencies]
tracing = { version = "0.1.40", features = ["log"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
static_assertions = "1.1.0"
derive_more = { version = "1.0.0", features = ["display"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }

wiremock = "0.6.2"
reqwest = { version = "0.12.7", features = ["json"] }

# To satisfy -Zminimal-versions
[target.'cfg(any())'.dependencies]
openssl-sys = { version = "0.9.103", optional = true }
openssl = { version = "0.10.66", optional = true }